Compile with jdk14 and enable preview feature