@@ -6,7 +6,15 @@ plugins {
 
 group = 'org.orekyuu'
 version = '0.0.1'
-sourceCompatibility = '11'
+sourceCompatibility = '14'
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['--enable-preview']
+}
+
+test {
+    jvmArgs = ['--enable-preview']
+}
 
 repositories {
     mavenCentral()
